After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 740542 - Action: get_localized_name is not implemented
Action: get_localized_name is not implemented
Status: RESOLVED FIXED
Product: java-atk-wrapper
Classification: Applications
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Magdalen Berns (irc magpie)
java-atk-wrapper maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2014-11-22 19:05 UTC by Magdalen Berns (irc magpie)
Modified: 2015-07-13 19:52 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Create jaw_action_get_localized_name & getLocalizedName (4.83 KB, patch)
2015-07-13 19:22 UTC, Magdalen Berns (irc magpie)
committed Details | Review

Description Magdalen Berns (irc magpie) 2014-11-22 19:05:13 UTC
This method needs to be implemented
Comment 1 André Klapper 2015-02-27 16:58:16 UTC
[Moving at-spi/java-atk-wrapper bugs to separate product. See bug 740075]
Comment 2 Magdalen Berns (irc magpie) 2015-06-24 21:49:32 UTC
Confirmed as missing: https://git.gnome.org/browse/atk/tree/atk/atkaction.h#n67
Comment 3 Magdalen Berns (irc magpie) 2015-07-13 19:22:34 UTC
Created attachment 307365 [details] [review]
Create jaw_action_get_localized_name & getLocalizedName