Create jaw_action_get_localized_name & getLocalizedName

Bug: https://bugzilla.gnome.org/show_bug.cgi?id=740542